# logiq

./: Cargo.toml  LICENSE  README.md
benches/: eval.rs  parsing.rs
examples/: flow.rs
src/: eval.rs  gate.rs  lexer.rs  lib.rs  parser.rs  requirement.rs  token.rs
src/data/: expression.rs  gate.rs  mod.rs  token.rs  value.rs
src/evaluator/: bdd.rs  mod.rs
src/token/: mod.rs  parse.rs  parser.rs  scan.rs  scanner.rs
