[package]
name = "requiem"
version = "0.0.1"
authors = ["Agora DAO <mark@gold.com>"]
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.4.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }

[[bench]]
name = "bench_parsing"
path = "benches/parsing.rs"
harness = false
