[package]
name = "logiq"
description = "A simple logic evaluator engine"
version = "0.1.0"
repository = "https://github.com/schronck/logiq"
readme = "README.md"
license = "MIT"
authors = ["Shronk <ureshpohar@gmail.com>"]
categories = ["algorithms", "data-structures"]
keywords = ["parsing"]
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
logos = "0.13.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
criterion = "0.4.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }

[[bench]]
name = "bench_eval"
path = "benches/eval.rs"
harness = false
